--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ body{width: 100%;height: 100vh;background: linear-gradient(180deg, #DD6D6D 0%, #
 #wrap footer .btn{position: absolute;bottom: -5px;right: -5px;}
 
 /* 팝업 */
-#popup{position: absolute;right: 42px;bottom: 42px;width: 400px;height: 425px;border-radius: 20px;box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); background: url(../images/popup.png) no-repeat center/cover;display: none}
+#popup{position: absolute;right: 42px;bottom: 42px;width: 400px;height: 425px;border-radius: 20px;box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); background: url(../images/popup.png) no-repeat center/cover;display: none;z-index: 9999;}
 #popup span.close{position: absolute;top: 20px;right: 20px;display: block;opacity: 1;}
 #popup span.close:hover{opacity: 0.7;}
 
@@ -43,7 +43,7 @@ body{width: 100%;height: 100vh;background: linear-gradient(180deg, #DD6D6D 0%, #
 #wrap header .lm .mobileMenu .overlay .overlay-content ul li a:hover,
 #wrap header .lm .mobileMenu .overlay .overlay-content ul li a:focus{opacity: 0.5;}
 
-
+.bg{display: none;position: fixed;top: 0;left: 0;width: 100%;height: 100%;background-color: rgba(0, 0, 0, 0.7);z-index: 8;}
 /* mobile */
 @media(max-width:720px) {
 
@@ -88,6 +88,7 @@ body{width: 100%;height: 100vh;background: linear-gradient(180deg, #DD6D6D 0%, #
     position: absolute;
     top: 50%; left: 50%;
     transform: translate(-50%,-50%);
+    z-index: 99999;
 
 }
 }
